--- a/Hyprland/.config/hypr/configs/input.conf
+++ b/Hyprland/.config/hypr/configs/input.conf
@@ -2,7 +2,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = kb_rules =
+    kb_options =
+    kb_rules =
 
     follow_mouse = 1
 
