--- a/Hyprland/.config/hypr/configs/window_rules.conf
+++ b/Hyprland/.config/hypr/configs/window_rules.conf
@@ -9,11 +9,11 @@ $hiddenkitty = class:(hiddenkitty)
 
 windowrulev2 = float, $dropterm
 windowrulev2 = workspace special silent,$dropterm
-windowrulev2 = size 50% 60%,$dropterm
-windowrulev2 = size 50% 60%,$drop
-windowrulev2 = move 50% 20%,$dropterm
-windowrulev2 = center,$drop
-windowrulev2 = center,$dropterm
+# windowrulev2 = size 50% 60%,$dropterm
+# windowrulev2 = size 50% 60%,$drop
+# windowrulev2 = move 50% 20%,$dropterm
+# windowrulev2 = center,$drop
+# windowrulev2 = center,$dropterm
 
 windowrulev2 = float, $filedrop
 windowrulev2 = workspace special silent,$filedrop
@@ -27,3 +27,17 @@ windowrulev2 = maximize, $firefox
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = blur, ironbar
+
+windowrulev2 = suppressevent maximize, class:.*
+windowrulev2 = nofocus, class:^$, title:^$, xwayland:1, floating:0, pinned:0, fullscreen:0
+
+# Games on main 5
+windowrulev2 = workspace 5, class:steam
+windowrulev2 = workspace 5, class:steam, title:steam_app_553850$
+windowrulev2 = fullscreen, class:steam, title:steam_app_553850$
+
+windowrulev2 = workspace 19 silent, class:discord
+
+
+# Spotify on Laptop 10
+windowrulev2 = workspace 20, class:Spotify title:Spotify Premium
