--- a/Hyprland/.config/hypr/hyprlock.conf
+++ b/Hyprland/.config/hypr/hyprlock.conf
@@ -19,6 +19,12 @@ background {
   color = $base
 }
 background {
+  monitor = eDP-2
+  path = $HOME/Wallpapers/Hyprland/wall1
+  blur_passes = 0
+  color = $base
+}
+background {
   monitor = HDMI-A-1
   path = $HOME/Wallpapers/Hyprland/wall2
   blur_passes = 0
