--- a/Hyprland/.config/hypr/hyprpaper.conf
+++ b/Hyprland/.config/hypr/hyprpaper.conf
@@ -2,5 +2,6 @@ preload = /home/fs144/Wallpapers/Hyprland/wall1
 preload = /home/fs144/Wallpapers/Hyprland/wall2
 
 
+wallpaper = eDP-1, /home/fs144/Wallpapers/Hyprland/wall1
 wallpaper = eDP-2, /home/fs144/Wallpapers/Hyprland/wall1
 wallpaper = HDMI-A-1, /home/fs144/Wallpapers/Hyprland/wall2
