--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Keymaps
 unbind C-b
+unbind-key -T prefix y
 set -g prefix M-q
 # bind C-Space send-prefix
 bind M-q send-prefix
@@ -9,6 +10,7 @@ set -g default-terminal "tmux-256color"
 
 # Allow Yazi Image Display
 set -g allow-passthrough on
+set -g visual-activity off
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
@@ -40,6 +42,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 bind-key -r b run-shell "tmux neww btop"
+bind-key -r i run-shell "tmux neww yazi"
 bind-key -r t run-shell "~/.scripts/tmux-ledger"
 # bind-key -r N run-shell "tmux new ~/.scripts/tmux-sessionizer ~/.config/nvim"
 
