--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -1,3 +1,4 @@
+exec-once = hyprpm reload -n
 exec-once = systemctl --user start plasma-polkit-agent
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -11,9 +12,12 @@ exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = dunst
 exec-once = kdeconnect-indicator
-# exec-once = pypr
+exec-once = /usr/bin/pypr
 # exec-once = waybar
-exec-once = $HOME/.scripts/waybar_launch.sh
+exec-once = $HOME/.scripts/hyprpanel_launch.sh
+# exec-once = $HOME/.scripts/waybar_launch.sh
+# exec-once = hyprpanel
+# exec-once = killall mako
 
 # Start waydroid service
 # exec-once = waydroid session start
@@ -25,3 +29,7 @@ exec-once = $HOME/.scripts/waybar_launch.sh
 # exec-once = swww-daemon
 # exec-once = swww img ~/Wallpapers/Aesthetic/yorha.jpg
 exec-once = hyprpaper
+# exec-once = $HOME/.scripts/launch_mpvpaper.sh
+
+# Serve Ollama
+exec-once = ollama serve
