--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -6,7 +6,11 @@ $hyprDir = $HOME/.config/hypr
 #$wallpaper-aesthetic = $scriptsDir/randomAestheticWallpaper
 #$wallpaper-select = $HOME/.scripts/wallpaper-switcher2
 #$wallpaper-select = $HOME/.scripts/hyprpaper-wallpaper-changer.sh
+# Wallpaper Selecters
 $wallpaper-select = $HOME/.scripts/linked-hyprpaper-wall-changer.sh
+$live-wallpaper-select = $HOME/.scripts/live_linked_mpvpaper_changer.sh
+
+
 $radio = $HOME/.scripts/rofi-lofi.fish
 
 $light = $scriptsDir/brightup
@@ -16,12 +20,13 @@ $volume = $scriptsDir/volume
 
 $files = thunar
 # $browser = cachy-browser
-$browser = firefox
+# $browser = firefox
+$browser = zen
 # $terminal = footclient
 # $terminal = kitty -e tmux -u new-session -A -s ReaperGaruda
 # $terminal = $HOME/.scripts/kitty_with_tmux.sh
-$terminal = $HOME/.scripts/ghostty_with_tmux.sh
-# $terminal = ghostty
+# $terminal = $HOME/.scripts/ghostty_with_tmux.sh
+$terminal = ghostty
 $notes = $HOME/.scripts/notes.sh
 $tmuxSelect = $HOME/.scripts/rofi-tmux.sh
 # $launcher = /home/fs144/.config/rofi/bin/launcher
@@ -52,10 +57,10 @@ bind = ,xf86audiostop, exec, playerctl stop
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $shiftMod, return, exec, $notes
-bind = $shiftMod, R, exec, $HOME/.scripts/waybar_launch.sh
+# bind = $shiftMod, R, exec, $HOME/.scripts/waybar_launch.sh
 # bind = $shiftMod, a, exec, $notes
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT CTRL, M, exit,
+bind = $shiftMod CTRL, M, exit,
 bind = $mainMod, E, exec, $files
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating,
@@ -71,33 +76,68 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+# # Switch workspaces with mainMod + [0-9]
+# bind = $mainMod, 1, workspace, 1
+# bind = $mainMod, 2, workspace, 2
+# bind = $mainMod, 3, workspace, 3
+# bind = $mainMod, 4, workspace, 4
+# bind = $mainMod, 5, workspace, 5
+# bind = $mainMod, 6, workspace, 6
+# bind = $mainMod, 7, workspace, 7
+# bind = $mainMod, 8, workspace, 8
+# bind = $mainMod, 9, workspace, 9
+# bind = $mainMod, 0, workspace, 10
+
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, 1, split-workspace, 1
+bind = $mainMod, 2, split-workspace, 2
+bind = $mainMod, 3, split-workspace, 3
+bind = $mainMod, 4, split-workspace, 4
+bind = $mainMod, 5, split-workspace, 5
+bind = $mainMod, 6, split-workspace, 6
+bind = $mainMod, 7, split-workspace, 7
+bind = $mainMod, 8, split-workspace, 8
+bind = $mainMod, 9, split-workspace, 9
+bind = $mainMod, 0, split-workspace, 10
+
+# # Move active window to a workspace with mainMod + SHIFT + [0-9]
+# bind = $shiftMod, 1, movetoworkspacesilent, 1
+# bind = $shiftMod, 2, movetoworkspacesilent, 2
+# bind = $shiftMod, 3, movetoworkspacesilent, 3
+# bind = $shiftMod, 4, movetoworkspacesilent, 4
+# bind = $shiftMod, 5, movetoworkspacesilent, 5
+# bind = $shiftMod, 6, movetoworkspacesilent, 6
+# bind = $shiftMod, 7, movetoworkspacesilent, 7
+# bind = $shiftMod, 8, movetoworkspacesilent, 8
+# bind = $shiftMod, 9, movetoworkspacesilent, 9
+# bind = $shiftMod, 0, movetoworkspacesilent, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $shiftMod, 1, movetoworkspace, 1
-bind = $shiftMod, 2, movetoworkspace, 2
-bind = $shiftMod, 3, movetoworkspace, 3
-bind = $shiftMod, 4, movetoworkspace, 4
-bind = $shiftMod, 5, movetoworkspace, 5
-bind = $shiftMod, 6, movetoworkspace, 6
-bind = $shiftMod, 7, movetoworkspace, 7
-bind = $shiftMod, 8, movetoworkspace, 8
-bind = $shiftMod, 9, movetoworkspace, 9
-bind = $shiftMod, 0, movetoworkspace, 10
+bind = $shiftMod, 1, split-movetoworkspacesilent, 1
+bind = $shiftMod, 2, split-movetoworkspacesilent, 2
+bind = $shiftMod, 3, split-movetoworkspacesilent, 3
+bind = $shiftMod, 4, split-movetoworkspacesilent, 4
+bind = $shiftMod, 5, split-movetoworkspacesilent, 5
+bind = $shiftMod, 6, split-movetoworkspacesilent, 6
+bind = $shiftMod, 7, split-movetoworkspacesilent, 7
+bind = $shiftMod, 8, split-movetoworkspacesilent, 8
+bind = $shiftMod, 9, split-movetoworkspacesilent, 9
+bind = $shiftMod, 0, split-movetoworkspacesilent, 10
+bind = $shiftMod, m, split-changemonitor, +1
+bind = $shiftMod, n, split-changemonitor, -1
+
+
+# # Scroll through existing workspaces with mainMod + scroll
+# bind = $mainMod, mouse_down, workspace, e+1
+# bind = $mainMod, mouse_up, workspace, e-1
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, split-cycleworkspaces, -1
+bind = $mainMod, mouse_up, split-cycleworkspaces, +1
+
+# # Scroll through existing workspaces with mainMod + scroll
+# bind = $mainMod, mouse_down, workspace, e+1
+# bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -105,13 +145,14 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Screenshots
 bind = $shiftMod, s, exec, hyprshot -m region
-bind = $mainMod, PRINT, exec, hyprshot -m output
-bind = $shiftMod, PRINT, exec, hyprshot -m window
+bind = $mainMod, p, exec, hyprshot -m output
+bind = $shiftMod, p, exec, hyprshot -m window
 
 # Wallpapers
-# bind = $mainMod, W, exec, $wallpaper-change
+## bind = $shiftMod, W, exec, $wallpaper-select
+## bind = $shiftMod, W, exec, $wallpaper-aesthetic
 bind = $shiftMod, W, exec, $wallpaper-select
-# bind = $shiftMod, W, exec, $wallpaper-aesthetic
+# bind = $shiftMod, W, exec, $live-wallpaper-select
 
 # Scratchpads
 bind = $mainMod CTRL, 1, exec, pypr toggle term
