--- a/Hyprland/.config/hypr/configs/monitor_layout.conf
+++ b/Hyprland/.config/hypr/configs/monitor_layout.conf
@@ -4,8 +4,9 @@
 # monitor=eDP-2,2560x1600@60, 0x0, 1
 # monitor=eDP-1,1920x1200@165, 0x1080, 1
 # monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
-monitor=eDP-1,1920x1200@165, 1920x0, 1
-monitor=eDP-2,1920x1200@165, 0x0, 1
-monitor=HDMI-A-1, 1920x1080@75, 0x0, 1
+# monitor=eDP-1,1920x1200@165, 1920x0, 1
+monitor=eDP-1,2560x1600@165.02, 0x0, 1.6
+monitor=eDP-2,2560x1600@165, 0x0, 1.6
+monitor=HDMI-A-1, 1920x1080@75, 1600x0, 1
 #  # vrr, 2
 monitor=,preferred,auto, 1
