--- a/Hyprland/.config/hypr/configs/workspace.conf
+++ b/Hyprland/.config/hypr/configs/workspace.conf
@@ -1,18 +1,19 @@
-workspace=HDMI-A-1, 1
-workspace=HDMI-A-1, 2
-workspace=HDMI-A-1, 3
-workspace=HDMI-A-1, 4
-workspace=HDMI-A-1, 5
+# workspace=HDMI-A-1, 1
+# workspace=HDMI-A-1, 2
+# workspace=HDMI-A-1, 3
+# workspace=HDMI-A-1, 4
+# workspace=HDMI-A-1, 5
 
-# In case monitor is on eDP1
-workspace=eDP-1, 6
-workspace=eDP-1, 7
-workspace=eDP-1, 8
-workspace=eDP-1, 9
-workspace=eDP-1, 0
-# In case monitor is on eDP2
-workspace=eDP-2, 6
-workspace=eDP-2, 7
-workspace=eDP-2, 8
-workspace=eDP-2, 9
-workspace=eDP-2, 0
+## In case monitor is on eDP1
+# workspace=eDP-1, 6
+# workspace=eDP-1, 7
+# workspace=eDP-1, 8
+# workspace=eDP-1, 9
+# workspace=eDP-1, 0
+
+## In case monitor is on eDP2
+# workspace=eDP-2, 6
+# workspace=eDP-2, 7
+# workspace=eDP-2, 8
+# workspace=eDP-2, 9
+# workspace=eDP-2, 0
