--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -10,6 +10,14 @@ source = ~/.config/hypr/configs/input.conf
 source = ~/.config/hypr/configs/decorations.conf
 
 
+plugin {
+  split-monitor-workspace {
+    count = 10
+    keep_focused = 0
+    enable_notifications = 0
+    enable_persistent_workspaces = 1
+  }
+}
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -50,6 +58,7 @@ misc {
 #     col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
 #     col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
 # }
+
 
 source = ~/.config/hypr/configs/autostart.conf
 
