--- a/Hyprland/.config/hypr/configs/autostart.conf
+++ b/Hyprland/.config/hypr/configs/autostart.conf
@@ -33,3 +33,7 @@ exec-once = hyprpaper
 
 # Serve Ollama
 exec-once = ollama serve
+
+# Music
+exec-once = mpd
+exec-once = tmux new-session -s "Music" -d
