--- a/Hyprland/.config/hypr/configs/keybinds.conf
+++ b/Hyprland/.config/hypr/configs/keybinds.conf
@@ -25,8 +25,8 @@ $browser = zen
 # $terminal = footclient
 # $terminal = kitty -e tmux -u new-session -A -s ReaperGaruda
 # $terminal = $HOME/.scripts/kitty_with_tmux.sh
-# $terminal = $HOME/.scripts/ghostty_with_tmux.sh
-$terminal = ghostty
+$terminal = $HOME/.scripts/ghostty_with_tmux.sh
+# $terminal = ghostty
 $notes = $HOME/.scripts/notes.sh
 $tmuxSelect = $HOME/.scripts/rofi-tmux.sh
 # $launcher = /home/fs144/.config/rofi/bin/launcher
