--- a/MPD/.ncmpcpp/config
+++ b/MPD/.ncmpcpp/config
@@ -1,7 +1,8 @@
 ncmpcpp_directory = "~/.ncmpcpp"
 lyrics_directory = "~/Music/.lyrics"
+#mpd_host = "~/.mpdsocket"
 mpd_host = "0.0.0.0"
-mpd_port = "6601"
+mpd_port = "6600"
 mpd_music_dir = "~/Music"
 mpd_crossfade_time = "5"
 mpd_connection_timeout = "5"
@@ -18,6 +19,7 @@ visualizer_look = "+|"
 
 # GENERAL
 # ---
+browser_display_mode = "classic"
 external_editor                  = nvim
 message_delay_time               = 1
 playlist_disable_highlight_delay = 2
@@ -32,7 +34,6 @@ mouse_list_scroll_whole_page = "yes"
 lines_scrolled = "1"
 playlist_shorten_total_times = "yes"
 playlist_display_mode = "columns"
-browser_display_mode = "columns"
 search_engine_display_mode = "columns"
 playlist_editor_display_mode = "columns"
 user_interface = "alternative"
@@ -47,7 +48,7 @@ startup_screen = "playlist"
 /* progressbar_color = "black" */
 /* progressbar_elapsed_color = "yellow" */
 progressbar_color = "black"
-progressbar_elapsed_color = "magenta"
+progressbar_elapsed_color = "blue"
 
 # COLORS
 # ---
